client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

main {
  min-height: 90vh;
}

header {
  background-color: #264653;
  color: #3D405B;
}

header>div {
  display: flex;
  flex-wrap: wrap;
}

.headerImg {
  margin-left: 30px;
  max-height: 80px;
  padding: 10px;
}

.nav-links {
  justify-content: center;
  align-self: center;
  justify-content: flex-end;
  margin-right: 20px;
  color: #81b29a;
}

.nav-links a {
  margin: 0 10px;
}

.nav-spacer {
  margin: 0 auto;
}

.heroImage {
  height: 200px;
  overflow: hidden;
  background: url(https://res.cloudinary.com/dfamiaufc/image/upload/v1651960530/Hobby%20Box/heroImage_x00w0v.webp) center center no-repeat;
  background-attachment: fixed;
}
.aboutUsHeroImage {
  height: 200px;
  overflow: hidden;
  background: url(https://res.cloudinary.com/dfamiaufc/image/upload/v1652046542/Hobby%20Box/pexels-cottonbro-4553180_fwkhsd.jpg) center center no-repeat;
  background-attachment: fixed;
}

.heroImage-profile {
  height: 200px;
  overflow: hidden;
  background: url(https://res.cloudinary.com/dfamiaufc/image/upload/c_scale,w_2100/v1652044758/Hobby%20Box/pexels-cottonbro-4553183_fg4alp.jpg) 50% 0% no-repeat;
  background-attachment: fixed;
}

h3,
h2 {
  font-weight: bold;
  text-align: center;
  font-size: 2rem;
}

footer {
  display: flex;
  flex-wrap: wrap;
  bottom: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: #264653;
  color: white;
  height: 4rem;
}

.footerWrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 0 auto;
}

.cardWrapper {
  display: flex;
  flex-wrap: wrap;
  max-width: 80%;
  margin: 0 auto;
  justify-content: center;
}

.card {
  padding: 20px;
  text-align: center;
  max-width: 400px;
  margin: 2rem;
}

.card:hover {
  cursor: pointer;
}

.productPage {
  margin-top: 20px;
  max-width: 80%;
  margin: 20px auto;
}

.productContent {
  display: flex;
  flex-wrap: wrap;
  margin-top: 20px;
  justify-content: center;
}

.imageWrapper {
  display: flex;
  flex-wrap: wrap;

}

.infoWrapper {
  margin: 0 10px;
  white-space: pre-wrap;
}

.infoWrapper button {
  margin-top: 10px;
}

.infoWrapper p {
  margin-top: 10px;
}

@media (min-width: 1024px) {

  .imageWrapper {
    min-width: 50%;
    max-width: 55%;
  }

  .imageWrapper img {
    max-height: 700px;
  }

  .infoWrapper {
    max-width: 40%;
  }
}

button {
  background-color: #264653;
  color: #81b29a;
  border: 2px #3D405B solid;
  padding: 10px;
  border-radius: 4px;
}

.form {
  display: flex;
  flex-direction: column;
  margin-left: 2rem;
}

input {
  margin-top: 1rem;
}

.missing {
  border: 4px solid #d36443;
  border-radius: 0.25rem;
  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.warning {
  display: flex;
  align-items: center;
  color: #d36443;
}

.thumbImgWrapper {
  width: -webkit-fill-available;
}

.thumbImg {
  max-width: 85px;
  margin-top: 20px;
  padding-right: 20px;
}

.imageWrapper button {
  background-color: transparent;
  color: transparent;
  border: none;
  padding: 0;
}

.trash-button {
  padding-right: 10px;
}

.trash-button:hover {
  cursor: pointer;
}

.cart-item {
  padding: 1rem 0 1rem 2rem;
}

.total {
  padding: 1rem 2rem 1rem 2rem;
}

.checkout-btn {
  margin: 1rem;
}

.welcome {
  margin: 2rem;
  font-size: 50px;
  font-weight: 300;
}

.home-header {
  font-size: 25px;
  font-weight: 300;
}

.box-title {
  font-size: 25px;
  font-weight: 300;
  margin-top: 1rem;
}

.product-header {
  font-size: 25px;
  font-weight: 300;
  margin-top: 1rem;
  background-color: #81b29a;
  color: white;
  padding: 1rem;
  margin: 1rem;
}

.order-details {
  margin: 1rem 0 3rem 2rem;
}

.detail {
  margin-bottom: 1rem;
  font-size: 17px;;
}

.thanks {
  font-weight: 300;
  margin: 2rem;
}

.form.form{
  margin: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
   align-items: center;
  width: 80%
  
}

.signUpTitle {
  margin: 20px;
}

.signUpButton {
  margin: 15px;
  display: flex;
  justify-content:center;
  align-self: center;
} 

 .signUpInput{
  display: flex;
  justify-content: center;
  align-self: center;
  width:  70%;
}

.signUpForm {
  display: flex;
  justify-content: center;
  align-self: center;
}

.nav-button {
  border: none;
  font-size: 18px;
  color: #81b29a;
}

.loginFormInputs{
  display: flex;
  justify-content: center;
  align-self: center;
}

.loginSubmitButton {
  margin: 15px;
  display: flex;
  justify-content: center;
  align-self: center;
} 

.loginForm{
  display: flex;
  justify-content: center;
  align-self: center;
}

.loginFormErr{
  display: flex;
  justify-content:center;
  align-items: center;
  
}

.SandLBackground{
  background-image: url("https://res.cloudinary.com/dfamiaufc/image/upload/v1651960530/Hobby%20Box/heroImage_x00w0v.webp");
  background-size: cover;
}

.marginSetter {
  margin: 0px;
}

.loginTitle {
  padding: 20px;
}
.profile {
  margin-top: 3rem;
}

